apps/production/yourphr-relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yourphr-relay
  namespace: yourphr
spec:
  selector:
    app: yourphr-relay
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
